# riscv-os

./: .ccls  .gitignore  LICENSE  Makefile  README.md  baremetal.ld  notes.md  shell.nix
apps/: Cargo.toml  Makefile  shell.nix
apps/apps/hello-rust/: Cargo.toml  build.rs
apps/apps/hello-rust/src/: main.rs
apps/common/riscvos-lib-rust/: Cargo.toml  build.rs
apps/common/riscvos-lib-rust/src/: bindings.rs  bit32.rs  error.rs  errors.rs  io.rs  lib.rs  math32.rs  math64.rs  screen.rs  string.rs  sysutils.rs  terminal.rs  time.rs  unicode.rs
docs/: README.md  api.md  architecture.md  building.md  development.md  features.md  getting_started.md  hardware.md
headers/: assert.h  bindings.h  bit32.h  buffer.h  config-sifive_u.s  config-virt.s  config.s  consts.s  file.h  io.h  macros.s  math32.h  math64.h  mem.h  screen.h  shell.h  stdio.h  string.h  sys_utils.h  terminal.h  test.h  time.h  types.h  uart.h  unicode.h
include/: consts.s  macros.s
lib/: bit32.s  bit64.s  buffer.s  math64.s  screen.s  string.s  sysutils.s  terminal.s  time.s  unicode.s
src/: bit32.s  bit64.s  config.s  debug.s  dev_mngr.s  fb.s  file.s  io.s  irq.s  macros.s  main.s  math.s  math32.s  math64.s  mem.s  reflection.s  screen.s  shell.s  startup.s  stdio.s  string.s  sysconfig.s  sysfn.s  system.s  time.s  uart.s
tests/: assert.c  helpers.s  startup.s  test_bit32.c  test_buffer.c  test_commands.s  test_irq.s  test_math.s  test_math32.c  test_math32.s  test_math64.c  test_rtc.c  test_rtc.s  test_shell.s  test_stack.s  test_string.c  test_string.s  test_terminal.c  test_time.c  (+1 more)
(+52 files in other folders)
