[package]
name = "hello-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
riscvos = { path="../../common/riscvos-lib-rust" }

[profile.release]
# opt-level = "z"     # Optimize for size.
# lto = true          # Enable Link Time Optimization
# codegen-units = 1   # Reduce number of codegen units to increase optimizations.
# panic = "abort"     # Abort on panic
strip = true        # Automatically strip symbols from the binary.
